src/App.css
.App {
  text-align: center;
  table-layout: fixed;
  box-sizing: border-box;
}

.buttons {
  margin: 10px;
  font-size: 20px;
}

.cell{
  cursor: pointer;
  padding: min(16px, 1.5vw);
  z-index:-1;
  position: relative;
  transition: 0.1s;
}

.cell:hover {
  opacity: 0.6;
}

table {
  margin: 0 auto;
}

